--- a/Getting_Started_with_a_MinION/libs/remark-css-0.0.1/Getting_Started_with_a_MinION.css
+++ b/Getting_Started_with_a_MinION/libs/remark-css-0.0.1/Getting_Started_with_a_MinION.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700);
 @import url(https://fonts.googleapis);
@@ -6,11 +6,13 @@
 body { font-family: 'Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif; 
 }
 h1, h2, h3 {
-  font-family: 'Yanone Kaffeesatz';
+  /*font-family: 'Yanone Kaffeesatz';*/
   font-weight: normal;
 }
 
-
+h2{
+  margin-bottom: 0px;
+}
 
 a, a > code {
   color: rgb(249, 38, 114);
@@ -36,16 +38,15 @@ a, a > code {
 }
 /* Two-column layout */
 .left-column {
-  color: #777;
-  width: 20%;
+  /*color: #777;*/
+  width: 47%;
   /*height: 92%;*/
   float: left;
 }
-.left-column h2:last-of-type, .left-column h3:last-child {
-  color: #000;
-}
+
 .right-column {
-  width: 75%;
+  width: 75%; 
+  margin-bottom: -2em;
   float: right;
   /*padding-top: 1em;*/
 }
@@ -74,15 +75,22 @@ blockquote {
   font-size: 40%
 }
 
+.h1-with-images h1 {
+  margin-bottom: 0px;
+}
+
+.my-header h1 h3{
+  margin-top: 2px;
+}
 
 /* Default background colour, and font size */
 .remark-slide-content{
-                       padding-top: 4.2em;
+                       padding-top: 5.5em;
                        padding-left: 100px;
                        padding-right: 100px;
                        background-image: url("../../images/agrf_logo.png");
                        background-size: cover;
-                       font-size: 220%;    /* Regular text */
+                       font-size: 170%;    /* Regular text */
                        padding-bottom: 1em;
                        
                      }
