--- a/Long_Reads_QLD/libs/remark-css-0.0.1/Long_Reads_QLD.css
+++ b/Long_Reads_QLD/libs/remark-css-0.0.1/Long_Reads_QLD.css
@@ -1,12 +1,20 @@
-@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700);
+@import url(https://fonts.googleapis);
 
-body { font-family: 'Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif; }
+body { font-family: 'Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif; 
+}
 h1, h2, h3 {
-  font-family: 'Yanone Kaffeesatz';
+  /*font-family: 'Yanone Kaffeesatz';*/
   font-weight: normal;
 }
+
+
+h2{
+  margin-bottom: 0px;
+}
+
 a, a > code {
   color: rgb(249, 38, 114);
   text-decoration: none;
@@ -15,7 +23,7 @@ a, a > code {
   position: absolute;
   bottom: 3em;
   padding-right: 4em;
-  font-size: 90%;
+  font-size: 50%;
 }
 .remark-code, .remark-inline-code { font-family: 'Source Code Pro', 'Lucida Console', Monaco, monospace; }
 .remark-code-line-highlighted     { background-color: #ffff88; }
@@ -31,18 +39,17 @@ a, a > code {
 }
 /* Two-column layout */
 .left-column {
-  color: #777;
-  width: 20%;
-  height: 92%;
+  /*color: #777;*/
+  width: 47%;
+  /*height: 92%;*/
   float: left;
 }
-.left-column h2:last-of-type, .left-column h3:last-child {
-  color: #000;
-}
+
 .right-column {
-  width: 75%;
+  width: 75%; 
+  margin-bottom: -2em;
   float: right;
-  padding-top: 1em;
+  /*padding-top: 1em;*/
 }
 .pull-left {
   float: left;
@@ -56,15 +63,151 @@ a, a > code {
   clear: both;
 }
 img, video, iframe {
-  max-width: 100%;
+  /*max-width: 100%;*/
 }
 blockquote {
   border-left: solid 5px lightgray;
   padding-left: 1em;
 }
+.baby-bear{
+  /*Because the porridge was just right*/
+  font-size: 80%;
+}
 .small {
   font-size: 70%
 }
-.tiny {
-  font-size: 40%
+.kinda-small {
+  font-size: 55%;
 }
+
+.tiny {
+  font-size: 45%
+}
+
+.baby-code .remark-code{
+  font-size: 75%;
+}
+.small-code .remark-code{
+  font-size: 55%;
+}
+
+.tiny-code .remark-code{
+  font-size: 45%;
+}
+
+
+.h1-with-images h1 {
+  margin-bottom: 0px;
+}
+
+.my-header h1 h3{
+  margin-top: 2px;
+}
+
+/* Default background colour, and font size */
+.remark-slide-content{
+                       padding-top: 5.5em;
+                       padding-left: 100px;
+                       padding-right: 100px;
+                       background-image: url("../../images/agrf_logo.png");
+                       background-size: cover;
+                       font-size: 170%;    /* Regular text */
+                       padding-bottom: 1em;
+                       
+                     }
+
+.remark-slide-content h1{
+  margin-bottom: 0;
+}                    
+
+.remark-slide-content h3{
+  margin-top: 0;
+}    
+
+
+.hint-slide{
+                       padding-top: 5.5em;
+                       padding-left: 100px;
+                       padding-right: 100px;
+                       background-image: url("../../images/agrf_logo_hint.png");
+                       background-size: cover;
+                       font-size: 170%;    /* Regular text */
+                       padding-bottom: 1em;
+                       
+                     }
+
+.pacbio-slide {
+               padding-top: 5.5em;
+               padding-left: 100px;
+               padding-right: 100px;
+               background-image: url("../../images/agrf_pacbio_logo.png");
+               background-size: cover;
+               font-size: 170%;    /* Regular text */
+               padding-bottom: 1em;
+
+}
+
+.ont-slide {
+           padding-top: 5.5em;
+           padding-left: 100px;
+           padding-right: 100px;
+           background-image: url("../../images/agrf_prom_logo.png");
+           background-size: cover;
+           font-size: 170%;    /* Regular text */
+           padding-bottom: 1em;
+}
+
+.long-slide {
+           padding-top: 5.5em;
+           padding-left: 100px;
+           padding-right: 100px;
+           background-image: url("../../images/agrf_both_logo.png");
+           background-size: cover;
+           font-size: 170%;    /* Regular text */
+           padding-bottom: 1em;
+}
+
+                     
+.genomics-innovation-hub{
+                       padding-top: 5.5em;
+                       padding-left: 100px;
+                       padding-right: 100px;
+                       background-image: url("../../images/gih_background.png");
+                       background-size: cover;
+                       font-size: 170%;    /* Regular text */
+                       padding-bottom: 1em;    
+}
+
+.li {padding-top:-2em}
+.ul {padding-top:-2em}
+
+.remark-slide-number {
+                       padding-bottom: 1em;
+                     }
+
+.genomics-innovation-hub .remark-slide-number{
+    padding-bottom: 0.2em;
+}
+
+table {
+  margin: auto;
+  border-top: 1px solid #666;
+  border-bottom: 1px solid #666;
+}
+table thead th { border-bottom: 1px solid #ddd; }
+th, td { padding: 5px; }
+tr:nth-child(even) { background: #eee }
+
+.title-slide {
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/3/39/Naruto_Shiki_Fujin.svg);
+  background-size: cover;
+}
+
+
+.title-slide .remark-slide-number {
+  display: none;
+}
+
+
+img[alt=gromit_gif] { width: 42%; }
+
